<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="20dp">
                <TextView style="@style/questionCount" android:textAlignment="center" android:gravity="center_horizontal"  android:text="Your Score is" />
                <TextView android:id="@+id/score" style="@style/question" android:layout_marginBottom="0dp" android:text="30/50"/>
                <TextView style="@style/questionCount"  android:textAlignment="center" android:gravity="center_horizontal" android:textSize="15sp" android:text="All answers are listed below"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="@drawable/background"
                android:elevation="2dp">
                <TextView style="@style/questionCount" android:text="Question 1"/>
                <TextView style="@style/question" android:textSize="20sp" android:layout_marginBottom="10dp" android:text="@string/question1"/>
                <TextView android:id="@+id/answer1" style="@style/userAnswer" android:text="Your Answer:" />
                <TextView style="@style/correctAnswer" android:text="@string/question1_correct_answer_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="@drawable/background"
                android:elevation="2dp">
                <TextView style="@style/questionCount"  android:text="Question 2"/>
                <TextView style="@style/question" android:textSize="20sp" android:layout_marginBottom="10dp" android:text="@string/question2"/>
                <TextView android:id="@+id/answer2" style="@style/userAnswer" android:text="Your Answer:" />
                <TextView style="@style/correctAnswer" android:text="@string/question2_correct_answer_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="@drawable/background"
                android:elevation="2dp">
                <TextView style="@style/questionCount" android:text="Question 3"/>
                <TextView style="@style/question" android:textSize="20sp" android:layout_marginBottom="10dp" android:text="@string/question3"/>
                <TextView android:id="@+id/answer3" style="@style/userAnswer" android:text="Your Answer:" />
                <TextView style="@style/correctAnswer" android:text="@string/question3_correct_answer_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:padding="20dp"
                android:background="@drawable/background"
                android:elevation="2dp">
                <TextView style="@style/questionCount" android:text="Question 4"/>
                <TextView style="@style/question" android:textSize="20sp" android:layout_marginBottom="10dp" android:text="@string/question4"/>
                <TextView android:id="@+id/answer4" style="@style/userAnswer" android:text="Your Answer:" />
                <TextView style="@style/correctAnswer" android:text="@string/question4_correct_answer_text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/background"
                android:elevation="2dp">
                <TextView style="@style/questionCount" android:text="Question 5"/>
                <TextView style="@style/question" android:textSize="20sp" android:layout_marginBottom="10dp" android:text="@string/question5"/>
                <TextView android:id="@+id/answer5" style="@style/userAnswer" android:text="Your Answer:" />
                <TextView style="@style/correctAnswer" android:text="@string/question5_correct_answer_text" />
            </LinearLayout>
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:onClick="submit"
                android:text="Go Home" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>